--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="author" content="Jacob Eggli" />
     <meta name="description" content="My personal portfolio website" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@1,700&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <title>Jacob Eggli - Web Developer</title>
   </head>
   <body>
