--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Jacob Eggli" />
-    <meta name="description" content="My personal portfolio website" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <meta
+      name="description"
+      content="Hey! My name is Jacob Eggli and I'm a web developer. Come check out my website to see what I do."
+    />
+    <meta
+      name="keywords"
+      content="Jacob, Eggli, Jacob Eggli, Web Developer, Front End, Back End, Full Stack, Freelance"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
