--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,12 +14,13 @@
       content="Jacob, Eggli, Jacob Eggli, Web Developer, Front End, Back End, Full Stack, Freelance"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@1,700&family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@1,700&amp;family=Raleway&amp;display=swap"
       rel="stylesheet"
     />
     <title>Jacob Eggli - Web Developer</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <div id="root"></div>
